# g-diffuser-bot

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  diffuser_server.py  environment.yaml  g-diffuser-bot.py  g_diffuser_bot.py  g_diffuser_bot_config.py  g_diffuser_bot_defaults.py  g_diffuser_bot_params.py  g_diffuser_cli.py  g_diffuser_config.py  g_diffuser_config_models.yaml  g_diffuser_defaults.py  g_diffuser_lib.py  g_diffuser_server.py  g_diffuser_start_server.py  prompt.bat  setup.py  start_discord_bot.bat  start_discord_bot.sh  start_interactive_cli.bat  start_interactive_cli.sh  start_interactive_cli_(waifu).bat  start_server.bat  start_server.sh  txt2img2.py
.github/: FUNDING.yml
backups/: README.md
bot/backups/: README.md
bot/inputs/: .gitignore  README.md
bot/inputs/scripts/: README.md
bot/outputs/: README.md
bot/saved/: .gitignore  README.md
debug/: README.md
extensions/: .gitignore  README.md  __init__.py  g_diffuser_lib.py  g_diffuser_utilities.py  grid_it.py  pipeline_stable_diffusion_inpaint_mk2.py
extensions/stable-diffusion-grpcserver/: .gitignore  .gitmodules  Dockerfile  Dockerfile.cuda118  README.md  build.sh  client.py  engines.yaml  environment.yaml  pyproject.toml  requirements.txt  server.py
extensions/stable-diffusion-grpcserver/api-interfaces/: .gitignore  CMakeLists.txt  README.md
extensions/stable-diffusion-grpcserver/api-interfaces/gooseai/: go.mod
extensions/stable-diffusion-grpcserver/api-interfaces/gooseai/completion/: completion.pb.go  completion_grpc.pb.go  completion_grpc_pb.d.ts  completion_grpc_pb.js  completion_pb.d.ts  completion_pb.js  completion_pb2.py  completion_pb_service.d.ts  completion_pb_service.js
extensions/stable-diffusion-grpcserver/api-interfaces/gooseai/dashboard/: dashboard.pb.go  dashboard_grpc.pb.go  dashboard_grpc_pb.d.ts  dashboard_grpc_pb.js  dashboard_pb.d.ts  dashboard_pb.js  dashboard_pb2.py  dashboard_pb_service.d.ts  dashboard_pb_service.js
extensions/stable-diffusion-grpcserver/api-interfaces/gooseai/engines/: engines.pb.go  engines_grpc.pb.go  engines_grpc_pb.d.ts  engines_grpc_pb.js  engines_pb.d.ts  engines_pb.js  engines_pb2.py  engines_pb_service.d.ts  engines_pb_service.js
extensions/stable-diffusion-grpcserver/api-interfaces/gooseai/generation/: generation.pb.go  generation_grpc.pb.go  generation_grpc_pb.js
extensions/stable-diffusion-grpcserver/api-interfaces/src/proto/: completion.proto  dashboard.proto  engines.proto
extensions/stable-diffusion-grpcserver/docker_support/: CMakeFile.txt.diff  cpp_extension.py
extensions/stable-diffusion-grpcserver/sdgrpcserver/: debug_recorder.py  images.py  manager.py  server.py  utils.py
extensions/stable-diffusion-grpcserver/sdgrpcserver/pipeline/: attention_replacer.py  lpw_text_embedding.py  structured_text_embedding.py  unified_pipeline.py
extensions/stable-diffusion-grpcserver/sdgrpcserver/pipeline/models/: memory_efficient_cross_attention.py  structured_cross_attention.py
extensions/stable-diffusion-grpcserver/sdgrpcserver/pipeline/old_schedulers/: scheduling_dpm2_ancestral_discrete.py  scheduling_dpm2_discrete.py  scheduling_euler_ancestral_discrete.py  scheduling_euler_discrete.py  scheduling_heun_discrete.py  scheduling_utils.py
extensions/stable-diffusion-grpcserver/sdgrpcserver/pipeline/schedulers/: scheduling_ddim.py
extensions/stable-diffusion-grpcserver/sdgrpcserver/proto/: generation.proto
extensions/stable-diffusion-grpcserver/sdgrpcserver/services/: dashboard.py  engines.py  generate.py
extensions/stable-diffusion-grpcserver/sdgrpcserver/sonora/: aio.py  client.py  echotest.py  wsgi.py
extensions/stable-diffusion-grpcserver/tests/: VRAMUsageMonitor.py  batch_independance.py  happy_path.py  testengines.yaml
extensions/stable_diffusion_grpcserver/: .gitignore  README.md  build.sh  client.py  environment.yaml  pyproject.toml  requirements.txt
extensions/stable_diffusion_grpcserver/sdgrpcserver/: manager.py  server.py  utils.py
extensions/stable_diffusion_grpcserver/sdgrpcserver/pipeline/: safety_checkers.py  scheduling_ddim.py  scheduling_euler_ancestral_discrete.py  scheduling_euler_discrete.py  scheduling_utils.py  unified_pipeline.py
extensions/stable_diffusion_grpcserver/sdgrpcserver/services/: engines.py  generate.py
extensions/stable_diffusion_grpcserver/sdgrpcserver/sonora/: asgi.py  protocol.py
inputs/: .gitignore  README.md
inputs/scripts/: .gitignore  README.md  demo.py  grid_maker.py  make_zoom_movie.py  zoom_composite.py  zoom_maker.py
installer/: .gitignore  make_installer.ps1  make_installer_old.ps1  setup_conda.ps1  setup_developer_mode.ps1  setup_docker.ps1  setup_wsl.ps1
installer/g-diffuser-installer/: .gitignore  g-diffuser-installer.ism  license_agreement.rtf
models/: .gitignore  README.md  models.yaml
modules/: __init__.py  g_diffuser_lib.py  g_diffuser_utilities.py  sdgrpcserver_client.py
outputs/: README.md
saved/: README.md
